# gamification-core

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/core/: config.py  database.py  seed.py
app/modules/: __init__.py
app/modules/events/: __init__.py  api.py  schemas.py
app/modules/progress/: __init__.py  api.py  models.py  schemas.py  service.py
app/modules/quests/: __init__.py  api.py  models.py  schemas.py  service.py
app/modules/rules/: __init__.py  engine.py  types.py
